--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "heroicons": "^2.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
