feat: Refactor TestCreateForm to use reusable InputField and SelectField components
- Introduced InputField and SelectField components for better code reuse and readability.
- Enhanced validation logic in TestCreateForm to handle undefined and null values.
- Added loading state management during form submission.
- Improved form styling and accessibility features.

feat: Update TestDelete component to require onDeleted callback

- Changed onDeleted prop to be mandatory for better control after deletion.

feat: Enhance TestEditForm with improved validation and styling

- Refactored validation logic to handle edge cases.
- Improved form layout and accessibility.
- Added onSuccess and onCancel props for better callback handling.

feat: Revamp TestTable component for better UX

- Improved loading and empty state handling.
- Enhanced table styling and accessibility.
- Added modal for editing tests with improved styling.

feat: Update useDashboard and useDashboardAvg hooks for error handling

- Added error state management to both hooks.
- Refactored fetch functions to use useCallback for better performance.

feat: Enhance attachment handling with new types and upload options

- Introduced AttachmentWire, UploadAttachmentOpts, and AttachmentUrlResponse types.
- Updated uploadAttachment function to support additional options and progress tracking.

fix: Add formatParameter utility function for better parameter display

- Created formatParameter function to format parameter strings for better readability.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.6",
     "heroicons": "^2.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
